--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+<title>Learning Git</title>
+</head>
 <body>
 <img src="../image/sun.jpg">
 <img src="../image/mountain.jpg">
